--- a/.github/workflows/8.3-using-vars-from-previous-jobs.yml
+++ b/.github/workflows/8.3-using-vars-from-previous-jobs.yml
@@ -12,6 +12,7 @@ jobs:
           echo "This is Job 1"
           sleep 10
           echo "This is Job 1"
+          output1="output from job 1"
   
   job2:
     runs-on: ubuntu-latest
@@ -21,6 +22,7 @@ jobs:
           echo "This is Job 2"
           sleep 10
           echo "This is Job 2"
+          output2="output from job 2"
 
   job3:
     runs-on: ubuntu-latest
@@ -30,6 +32,7 @@ jobs:
           echo "This is Job 3"
           sleep 10
           echo "This is Job 3"
+          output3="output from job 3"
 
   job4:
     runs-on: ubuntu-latest
@@ -39,10 +42,12 @@ jobs:
           echo "This is Job 4"
           sleep 10
           echo "This is Job 4"
+          output4="output from job 4"
 
   job5:
     needs: [job1, job2, job3, job4]
     runs-on: ubuntu-latest
     steps:
       - name: Print message from Job 3
-        run: echo "Job 5 started after Jobs 1-4 finished"
+        run: |
+          echo "Job 5 started using output from jobs 1-4: $output1 $output2 $output3 $output4"
