--- a/.github/workflows/8.3-using-vars-from-previous-jobs.yml
+++ b/.github/workflows/8.3-using-vars-from-previous-jobs.yml
@@ -10,9 +10,8 @@ jobs:
       - name: Print message from Job 1
         run: |
           echo "This is Job 1"
-          sleep 4
-          echo "This is Job 1"
           output1="output from job 1"
+          echo "::set-output name=output::output from job 1"
   
   job2:
     runs-on: ubuntu-latest
@@ -20,9 +19,8 @@ jobs:
       - name: Print message from Job 2
         run: |
           echo "This is Job 2"
-          sleep 4
-          echo "This is Job 2"
           output2="output from job 2"
+          echo "::set-output name=output::output from job 2"
 
   job3:
     runs-on: ubuntu-latest
@@ -30,9 +28,8 @@ jobs:
       - name: Print message from Job 3
         run: |
           echo "This is Job 3"
-          sleep 4
-          echo "This is Job 3"
           output3="output from job 3"
+          echo "::set-output name=output::output from job 3"
 
   job4:
     runs-on: ubuntu-latest
@@ -40,14 +37,21 @@ jobs:
       - name: Print message from Job 4
         run: |
           echo "This is Job 4"
-          sleep 4
-          echo "This is Job 4"
           output4="output from job 4"
+          echo "::set-output name=output::output from job 4"
 
   job5:
     needs: [job1, job2, job3, job4]
     runs-on: ubuntu-latest
     steps:
-      - name: Print message from Job 3
+      - name: Print message from Jobs 1-4
         run: |
           echo "Job 5 started using output from jobs 1-4: $output1 $output2 $output3 $output4"
+  
+  job6:
+    needs: [job1, job2, job3, job4]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print message from Jobs 1-4
+        run: |
+          echo "Job 5 started using output from jobs 1-4: ${{ needs.job1.outputs.output1 }} ${{ needs.job2.outputs.output2 }} ${{ needs.job3.outputs.output3 }} ${{ needs.job4.outputs.output4 }}"
