--- a/.github/workflows/8.3-using-vars-from-previous-jobs.yml
+++ b/.github/workflows/8.3-using-vars-from-previous-jobs.yml
@@ -54,4 +54,4 @@ jobs:
     steps:
       - name: Print message from Jobs 1-4
         run: |
-          echo "Job 5 started using output from jobs 1-4: ${{ needs.job1.outputs.output1 }} ${{ needs.job2.outputs.output2 }} ${{ needs.job3.outputs.output3 }} ${{ needs.job4.outputs.output4 }}"
+          echo "Job 6 started using output from jobs 1-4: ${{ needs.job1.outputs.output }} ${{ needs.job2.outputs.output }} ${{ needs.job3.outputs.output }} ${{ needs.job4.outputs.output }}"
