--- a/.github/workflows/8.3-using-vars-from-previous-jobs.yml
+++ b/.github/workflows/8.3-using-vars-from-previous-jobs.yml
@@ -6,52 +6,32 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.step1.outputs.output }}
     steps:
       - name: Print message from Job 1
+        id: step1
         run: |
           echo "This is Job 1"
-          output1="output from job 1"
+          echo "output from job 1"
           echo "::set-output name=output::output from job 1"
   
   job2:
     runs-on: ubuntu-latest
+    outputs:
+      output2: ${{ steps.step1.outputs.output }}
     steps:
       - name: Print message from Job 2
+        id: step1
         run: |
           echo "This is Job 2"
-          output2="output from job 2"
+          echo "output from job 2"
           echo "::set-output name=output::output from job 2"
-
-  job3:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Print message from Job 3
-        run: |
-          echo "This is Job 3"
-          output3="output from job 3"
-          echo "::set-output name=output::output from job 3"
-
-  job4:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Print message from Job 4
-        run: |
-          echo "This is Job 4"
-          output4="output from job 4"
-          echo "::set-output name=output::output from job 4"
-
-  job5:
-    needs: [job1, job2, job3, job4]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Print message from Jobs 1-4
-        run: |
-          echo "Job 5 started using output from jobs 1-4: $output1 $output2 $output3 $output4"
   
-  job6:
-    needs: [job1, job2, job3, job4,job5]
+  job3:
+    needs: [job1, job2]
     runs-on: ubuntu-latest
     steps:
-      - name: Print message from Jobs 1-4
+      - name: Print message from Jobs 1 and 2
         run: |
-          echo "Job 6 started using output from jobs 1-4: ${{ needs.job1.outputs.output }} ${{ needs.job2.outputs.output }} ${{ needs.job3.outputs.output }} ${{ needs.job4.outputs.output }}"
+          echo "Job 3 started using output from jobs 1 and 2: ${{ needs.job1.outputs.output1 }} ${{ needs.job2.outputs.output2 }}"
