--- a/.github/workflows/8.3-using-vars-from-previous-jobs.yml
+++ b/.github/workflows/8.3-using-vars-from-previous-jobs.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           echo "This is Job 1"
           echo "output from job 1"
-          echo "::set-output name=output::output from job 1"
+          echo "output=output from job 1" >> $GITHUB_OUTPUT
   
   job2:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
         run: |
           echo "This is Job 2"
           echo "output from job 2"
-          echo "::set-output name=output::output from job 2"
+          echo "output=output from job 2" >> $GITHUB_OUTPUT
   
   job3:
     needs: [job1, job2]
@@ -34,4 +34,4 @@ jobs:
     steps:
       - name: Print message from Jobs 1 and 2
         run: |
-          echo "Job 3 started using output from jobs 1 and 2: ${{ needs.job1.outputs.output1 }} ${{ needs.job2.outputs.output2 }}"
+          echo "Job 3 started using output from jobs 1 and 2: ${{ needs.job1.outputs.output }} ${{ needs.job2.outputs.output }}"
