--- a/.github/workflows/8.3-using-vars-from-previous-jobs.yml
+++ b/.github/workflows/8.3-using-vars-from-previous-jobs.yml
@@ -6,22 +6,24 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.step1.outputs.output }}  # Referencing the output of step1
     steps:
       - name: Print message from Job 1
         id: step1
         run: |
           echo "This is Job 1"
-          echo "output from job 1"
           echo "output=output from job 1" >> $GITHUB_OUTPUT
   
   job2:
     runs-on: ubuntu-latest
+    outputs:
+      output2: ${{ steps.step1.outputs.output }}  # Referencing the output of step1
     steps:
       - name: Print message from Job 2
         id: step1
         run: |
           echo "This is Job 2"
-          echo "output from job 2"
           echo "output=output from job 2" >> $GITHUB_OUTPUT
   
   job3:
