--- a/.github/workflows/8.3-using-vars-from-previous-jobs.yml
+++ b/.github/workflows/8.3-using-vars-from-previous-jobs.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.step1.outputs.output }}  # Referencing the output of step1
     steps:
       - name: Print message from Job 1
         id: step1
@@ -15,6 +17,8 @@ jobs:
   
   job2:
     runs-on: ubuntu-latest
+    outputs:
+      output2: ${{ steps.step1.outputs.output }}  # Referencing the output of step1
     steps:
       - name: Print message from Job 2
         id: step1
