--- a/.github/workflows/8.3-using-vars-from-previous-jobs.yml
+++ b/.github/workflows/8.3-using-vars-from-previous-jobs.yml
@@ -7,24 +7,22 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     outputs:
-      output1: ${{ steps.step1.outputs.output }}  # Referencing the output of step1
+      output: "output from job 1"
     steps:
       - name: Print message from Job 1
         id: step1
         run: |
           echo "This is Job 1"
-          echo "output=output from job 1" >> $GITHUB_OUTPUT
   
   job2:
     runs-on: ubuntu-latest
     outputs:
-      output2: ${{ steps.step1.outputs.output }}  # Referencing the output of step1
+      output: "output from job 2"
     steps:
       - name: Print message from Job 2
         id: step1
         run: |
           echo "This is Job 2"
-          echo "output=output from job 2" >> $GITHUB_OUTPUT
   
   job3:
     needs: [job1, job2]
@@ -32,4 +30,4 @@ jobs:
     steps:
       - name: Print message from Jobs 1 and 2
         run: |
-          echo "Job 3 started using output from jobs 1 and 2: ${{ needs.job1.outputs.output1 }} ${{ needs.job2.outputs.output2 }}"
+          echo "Job 3 started using output from jobs 1 and 2: ${{ needs.job1.outputs.output }} ${{ needs.job2.outputs.output }}"
