--- a/.github/workflows/8.4-reassigning-outputs-from-jobs.yml
+++ b/.github/workflows/8.4-reassigning-outputs-from-jobs.yml
@@ -1,4 +1,4 @@
-name: 8.3-assigning-outputs-from-jobs
+name: 8.4-assigning-outputs-from-jobs
 
 on:
   push:
@@ -13,6 +13,7 @@ jobs:
         id: step1
         run: |
           echo "This is Job 1"
+          echo "output=new output from job 1" >> $GITHUB_OUTPUT
   
   job2:
     runs-on: ubuntu-latest
@@ -23,6 +24,7 @@ jobs:
         id: step1
         run: |
           echo "This is Job 2"
+          echo "output=new output from job 2" >> $GITHUB_OUTPUT
   
   job3:
     needs: [job1, job2]
