--- a/.github/workflows/8.4-reassigning-outputs-from-jobs.yml
+++ b/.github/workflows/8.4-reassigning-outputs-from-jobs.yml
@@ -18,12 +18,13 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     outputs:
-      output: "output from job 2"
+      output: ${{ steps.step2.outputs.output }} 
     steps:
       - name: Print message from Job 2
-        id: step1
+        id: step2
         run: |
           echo "This is Job 2"
+          echo ${{ toJson(steps) }}
           echo "output=new output from job 2" >> $GITHUB_OUTPUT
   
   job3:
