--- a/.github/workflows/8.4-reassigning-outputs-from-jobs.yml
+++ b/.github/workflows/8.4-reassigning-outputs-from-jobs.yml
@@ -24,8 +24,8 @@ jobs:
         id: step2
         run: |
           echo "This is Job 2"
-          echo ${{ toJson(steps) }}
           echo "output=new output from job 2" >> $GITHUB_OUTPUT
+          echo "output=second output from job 2" >> $GITHUB_OUTPUT
   
   job3:
     needs: [job1, job2]
