--- a/.github/workflows/8.4-reassigning-outputs-from-jobs.yml
+++ b/.github/workflows/8.4-reassigning-outputs-from-jobs.yml
@@ -7,10 +7,10 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     outputs:
-      output: ${{ steps.job1.outputs.output }} 
+      output: ${{ steps.step1.outputs.output }} 
     steps:
       - name: Print message from Job 1
-        id: job1
+        id: step1
         run: |
           echo "This is Job 1"
           echo "output=new output from job 1" >> $GITHUB_OUTPUT
@@ -18,10 +18,10 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     outputs:
-      output: ${{ steps.job2.outputs.output }} 
+      output: ${{ steps.step2.outputs.output }} 
     steps:
       - name: Print message from Job 2
-        id: job2
+        id: step2
         run: |
           echo "This is Job 2"
           echo "output=new output from job 2" >> $GITHUB_OUTPUT
