--- a/.github/workflows/9.2-randomly-fail-a-pipeline.yml
+++ b/.github/workflows/9.2-randomly-fail-a-pipeline.yml
@@ -10,9 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Say Hello
+    - name: fail randomly
       run: |
         RANDOM_NUMBER=$((RANDOM % 100 + 1))
         echo "Generated random number: $RANDOM_NUMBER"
         if [ $RANDOM_NUMBER -lt 50 ]; then
           exit 1
+        echo "did not fail"
